# homework-2-0nhc

./: .gitignore  README.md  citations.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/turtle_brick/lib/turtle_brick/: arena
install/turtle_brick/share/turtle_brick/: package.sh  package.xml
install/turtle_brick/share/turtle_brick/config/: turtle.yaml
install/turtle_brick/share/turtle_brick/launch/: show_turtle.launch.xml
install/turtle_brick/share/turtle_brick/rviz/: turtle_brick.rviz
install/turtle_brick/share/turtle_brick/urdf/: _base_link.urdf.xacro  _platform.urdf.xacro  _platform_connector.urdf.xacro  _stem.urdf.xacro  _wheel.urdf.xacro  turtle.urdf.xacro
log/: latest_build
turtle_brick/: package.xml  setup.cfg  setup.py
turtle_brick/config/: turtle.yaml
turtle_brick/launch/: bringup.launch.xml  run_turtle.launch.py  run_turtle.launch.xml  show_turtle.launch.py  show_turtle.launch.xml  turtle_arena.launch.py  turtle_arena.launch.xml
turtle_brick/rviz/: turtle_brick.rviz
turtle_brick/test/: test_brick_launch.py  test_flake8.py  test_physics.py
turtle_brick/turtle_brick/: __init__.py  arena.py  catcher.py  debug_goal_pose.py  debug_tilt.py  dummy.py  holonomic_controller.py  holonomic_odometry.py  physics.py  states.py  turtle_robot.py
turtle_brick/urdf/: _base_link.urdf.xacro  _platform.urdf.xacro  _platform_connector.urdf.xacro  _stem.urdf.xacro  _wheel.urdf.xacro  turtle.urdf.xacro
turtle_brick_interfaces/: CMakeLists.txt  package.xml
turtle_brick_interfaces/test/: test_copyright.py  test_interfaces.py  test_pep257.py
