<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_brick</name>
  <version>0.0.0</version>
  <description>This package includes an arena node that has a physics engine to simulate a brick falling, a holonomic turtle controller to control the turetle to the reference position, and a catcher node to organize turtle's behaviors so that it can catch the falling brick.</description>
  <maintainer email="hanzx@u.northwestern.edu">Zhengxiao Han</maintainer>
  <license>WTFPL</license>

  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>tf_transformations</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
